repository/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repository
  namespace: linguist-system-backend
  labels:
    app: repository
spec:
  replicas: 1
  selector:
    matchLabels:
      app: repository
  template:
    metadata:
      labels:
        app: repository
    spec:
      containers:
        - name: repository-container
          image: repository
          resources:
            limits:
              memory: 200Mi
              cpu: 1
            requests:
              memory: 100Mi
              cpu: 1
          ports:
            - containerPort: 8072
      imagePullSecrets:
        - name: reg-sample
