repository/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repository
  namespace: linguist-system-backend
  labels:
    app: repository
spec:
  selector:
    app: repository
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
