repository/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repository
  namespace: linguist-system-backend
spec:
  ingressClassName: nginx
  rules:
    - host: api.linguist.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: repository
                port:
                  number: 8072
  tls:
    - hosts:
        - api.linguist.ru
      secretName: linguist.ru
